--- a/index.html
+++ b/index.html
@@ -3,17 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-lang-key="about-title">من نحن - المؤسسة المصرية الإماراتية</title>
-    <meta name="description" content="تعرف على تاريخ ورؤية وقيم المؤسسة المصرية الإماراتية للاستيراد والتصدير والتوكيلات التجارية.">
+    <title data-lang-key="home-title">المؤسسة المصرية الإماراتية للاستيراد والتصدير والتوكيلات التجارية</title>
+    <meta name="description" content="المؤسسة المصرية الإماراتية للاستيراد والتصدير والتوكيلات التجارية - بوابتك للتجارة العالمية. جودة، ثقة، سرعة.">
+    <meta name="keywords" content="استيراد, تصدير, توكيلات تجارية, مصر, الإمارات, تجارة دولية, منتجات, خدمات لوجستية">
     
+    <!-- Favicon -->
     <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
+
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Google Fonts - Cairo for Arabic, Roboto for English -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&family=Roboto:wght@400;700&display=swap">
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body class="rtl">
-    <!-- Navbar (same as index.html) -->
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
         <div class="container">
             <a class="navbar-brand" href="index.html">
@@ -25,10 +32,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html" data-lang-key="home">الرئيسية</a>
+                        <a class="nav-link active" aria-current="page" href="index.html" data-lang-key="home">الرئيسية</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="about.html" data-lang-key="about">من نحن</a>
+                        <a class="nav-link" href="about.html" data-lang-key="about">من نحن</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="services.html" data-lang-key="services">خدماتنا</a>
@@ -54,110 +61,123 @@
         </div>
     </nav>
 
-    <!-- Page Header -->
-    <section class="bg-primary text-white py-5 text-center">
+    <!-- Hero Section -->
+    <section class="hero-section text-white text-center">
         <div class="container">
-            <h1 data-lang-key="about-page-header">من نحن</h1>
-            <p class="lead" data-lang-key="about-page-tagline">قصتنا، رؤيتنا، وقيمنا التي تدفعنا نحو النجاح.</p>
+            <h1 class="display-3 fw-bold" data-lang-key="hero-heading">المؤسسة المصرية الإماراتية<br>للاستيراد والتصدير والتوكيلات التجارية</h1>
+            <p class="lead" data-lang-key="hero-subheading">بوابتك للتجارة العالمية: ثقة، جودة، سرعة.</p>
+            <a href="about.html" class="btn btn-primary btn-lg" data-lang-key="discover-more">اكتشف المزيد</a>
         </div>
     </section>
 
-    <!-- About Us Content -->
-    <section class="section-padding">
+    <!-- About Us & Services - Quick Glance -->
+    <section class="section-padding bg-light">
         <div class="container">
-            <div class="row align-items-center mb-5">
-                <div class="col-lg-6 mb-4 mb-lg-0">
-                    <img src="assets/img/about-us.jpg" alt="About Us Image" class="img-fluid about-image">
-                </div>
-                <div class="col-lg-6">
-                    <h2 class="section-title" data-lang-key="about-history-title">تاريخنا</h2>
-                    <p data-lang-key="about-history-content">
-                        تأسست المؤسسة المصرية الإماراتية في عام 2020 على يد مجموعة من الخبراء في مجال التجارة الدولية،
-                        بهدف سد الفجوة بين الأسواق الناشئة والأسواق العالمية. منذ نشأتنا، التزمنا بتوفير حلول تجارية مبتكرة وموثوقة،
-                        مما ساعدنا على بناء شبكة واسعة من الشركاء والعملاء في مختلف أنحاء العالم.
-                        نحن نفخر بمسيرتنا التي اتسمت بالنمو المستمر والالتزام بالجودة والشفافية.
+            <div class="row align-items-center">
+                <div class="col-md-6 mb-4 mb-md-0">
+                    <h2 class="section-title text-primary" data-lang-key="about-us-glance-title">من نحن</h2>
+                    <p class="lead" data-lang-key="about-us-summary">
+                        تأسست المؤسسة المصرية الإماراتية في عام 2020 لتكون جسرًا تجاريًا حيويًا يربط بين الأسواق المصرية، الإماراتية، والعالمية. 
+                        نلتزم بتقديم حلول استيراد وتصدير متكاملة ووكالات تجارية موثوقة، مدفوعة بقيم الجودة، الالتزام، الشفافية، والابتكار. 
+                        نحن نسعى لبناء شراكات استراتيجية طويلة الأمد ونعمل على تسهيل حركة التجارة العالمية بفاعلية واحترافية.
                     </p>
+                    <a href="about.html" class="btn btn-outline-primary" data-lang-key="read-more">اقرأ المزيد</a>
+                </div>
+                <div class="col-md-6">
+                    <h2 class="section-title text-primary" data-lang-key="our-services-glance-title">خدماتنا</h2>
+                    <ul class="list-unstyled">
+                        <li class="d-flex align-items-center mb-3">
+                            <i class="fas fa-check-circle text-success me-2 ms-0"></i>
+                            <span data-lang-key="service-import">الاستيراد الاحترافي</span>
+                        </li>
+                        <li class="d-flex align-items-center mb-3">
+                            <i class="fas fa-check-circle text-success me-2 ms-0"></i>
+                            <span data-lang-key="service-export">التصدير العالمي</span>
+                        </li>
+                        <li class="d-flex align-items-center mb-3">
+                            <i class="fas fa-check-circle text-success me-2 ms-0"></i>
+                            <span data-lang-key="service-agencies">الوكالات التجارية الموثوقة</span>
+                        </li>
+                        <li class="d-flex align-items-center mb-3">
+                            <i class="fas fa-check-circle text-success me-2 ms-0"></i>
+                            <span data-lang-key="service-logistics">الدعم اللوجستي والتجاري</span>
+                        </li>
+                    </ul>
+                    <a href="services.html" class="btn btn-outline-primary" data-lang-key="view-all-services">عرض جميع الخدمات</a>
                 </div>
             </div>
-
-            <div class="row align-items-center flex-row-reverse mb-5">
-                <div class="col-lg-6 mb-4 mb-lg-0">
-                    <img src="assets/img/mission-vision.jpg" alt="Mission Vision Image" class="img-fluid about-image">
-                </div>
-                <div class="col-lg-6">
-                    <h2 class="section-title" data-lang-key="about-mission-vision-title">رسالتنا ورؤيتنا</h2>
-                    <p data-lang-key="about-mission-content">
-                        **رسالتنا:** أن نكون الشريك التجاري المفضل للشركات التي تسعى للتوسع في الأسواق المصرية والإماراتية والعالمية،
-                        من خلال تقديم خدمات استيراد وتصدير وتوكيلات تجارية تتسم بالكفاءة، الجودة، والابتكار، مع الالتزام بأعلى معايير النزاهة والمسؤولية.
-                    </p>
-                    <p data-lang-key="about-vision-content">
-                        **رؤيتنا:** أن نصبح من الرواد في قطاع التجارة الدولية، مساهمين بفاعلية في دفع عجلة التنمية الاقتصادية،
-                        وخلق جسور تجارية مستدامة تخدم مصالح شركائنا وعملائنا على المدى الطويل.
-                    </p>
-                </div>
-            </div>
-
-            <h2 class="section-title text-center mb-5" data-lang-key="about-values-title">قيمنا الأساسية</h2>
-            <div class="row text-center">
-                <div class="col-md-3 mb-4">
-                    <div class="p-4 border rounded shadow-sm h-100">
-                        <i class="fas fa-medal fa-3x text-primary mb-3"></i>
-                        <h4 data-lang-key="value-quality">الجودة</h4>
-                        <p data-lang-key="value-quality-desc">التزام صارم بأعلى المعايير في كل ما نقدمه.</p>
-                    </div>
-                </div>
-                <div class="col-md-3 mb-4">
-                    <div class="p-4 border rounded shadow-sm h-100">
-                        <i class="fas fa-handshake-alt fa-3x text-primary mb-3"></i>
-                        <h4 data-lang-key="value-commitment">الالتزام</h4>
-                        <p data-lang-key="value-commitment-desc">الوفاء بوعودنا وتجاوز توقعات عملائنا.</p>
-                    </div>
-                </div>
-                <div class="col-md-3 mb-4">
-                    <div class="p-4 border rounded shadow-sm h-100">
-                        <i class="fas fa-lightbulb fa-3x text-primary mb-3"></i>
-                        <h4 data-lang-key="value-innovation">الابتكار</h4>
-                        <p data-lang-key="value-innovation-desc">البحث المستمر عن حلول تجارية جديدة ومبتكرة.</p>
-                    </div>
-                </div>
-                <div class="col-md-3 mb-4">
-                    <div class="p-4 border rounded shadow-sm h-100">
-                        <i class="fas fa-eye fa-3x text-primary mb-3"></i>
-                        <h4 data-lang-key="value-transparency">الشفافية</h4>
-                        <p data-lang-key="value-transparency-desc">التعامل بوضوح وصراحة في جميع العمليات.</p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Optional: Management Team -->
-            <h2 class="section-title text-center mt-5 mb-5" data-lang-key="about-team-title">فريق الإدارة</h2>
-            <div class="row justify-content-center">
-                <div class="col-md-4 mb-4">
-                    <div class="card shadow-sm text-center">
-                        <img src="assets/img/team-member1.jpg" class="card-img-top p-3 rounded-circle mx-auto d-block" style="width: 150px; height: 150px; object-fit: cover;" alt="Team Member 1">
-                        <div class="card-body">
-                            <h5 class="card-title fw-bold" data-lang-key="team-member1-name">أحمد المصري</h5>
-                            <p class="card-text text-muted" data-lang-key="team-member1-title">الرئيس التنفيذي</p>
-                            <p class="card-text small" data-lang-key="team-member1-desc">خبرة تزيد عن 20 عامًا في التجارة الدولية وتطوير الأعمال.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card shadow-sm text-center">
-                        <img src="assets/img/team-member2.jpg" class="card-img-top p-3 rounded-circle mx-auto d-block" style="width: 150px; height: 150px; object-fit: cover;" alt="Team Member 2">
-                        <div class="card-body">
-                            <h5 class="card-title fw-bold" data-lang-key="team-member2-name">فاطمة الإماراتي</h5>
-                            <p class="card-text text-muted" data-lang-key="team-member2-title">مدير العمليات</p>
-                            <p class="card-text small" data-lang-key="team-member2-desc">متخصصة في إدارة سلاسل الإمداد واللوجستيات بكفاءة عالية.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
         </div>
     </section>
 
-    <!-- Footer (same as index.html) -->
+    <!-- Features Section (Trust, Quality, Speed, Global Partnerships) -->
+    <section class="section-padding features-section">
+        <div class="container">
+            <h2 class="section-title text-center" data-lang-key="why-choose-us">لماذا تختارنا؟</h2>
+            <div class="row mt-5">
+                <div class="col-md-3 col-sm-6 mb-4">
+                    <div class="icon-box bg-white p-4 shadow-sm rounded">
+                        <i class="fas fa-handshake"></i>
+                        <h4 data-lang-key="feature-trust">الثقة</h4>
+                        <p data-lang-key="feature-trust-desc">نبني علاقاتنا على النزاهة والشفافية التامة.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6 mb-4">
+                    <div class="icon-box bg-white p-4 shadow-sm rounded">
+                        <i class="fas fa-gem"></i>
+                        <h4 data-lang-key="feature-quality">الجودة</h4>
+                        <p data-lang-key="feature-quality-desc">نلتزم بأعلى معايير الجودة في كل تعاملاتنا.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6 mb-4">
+                    <div class="icon-box bg-white p-4 shadow-sm rounded">
+                        <i class="fas fa-tachometer-alt"></i>
+                        <h4 data-lang-key="feature-speed">السرعة</h4>
+                        <p data-lang-key="feature-speed-desc">كفاءة عالية في التخليص والتسليم.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6 mb-4">
+                    <div class="icon-box bg-white p-4 shadow-sm rounded">
+                        <i class="fas fa-globe-americas"></i>
+                        <h4 data-lang-key="feature-partnerships">شراكات عالمية</h4>
+                        <p data-lang-key="feature-partnerships-desc">شبكة واسعة لضمان أفضل الفرص.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Partners / Testimonials (Slider is more complex, here's a static section) -->
+    <section class="section-padding bg-light">
+        <div class="container">
+            <h2 class="section-title text-center" data-lang-key="our-partners">شركاؤنا</h2>
+            <div class="row mt-5 justify-content-center align-items-center">
+                <div class="col-6 col-md-3 mb-4">
+                    <img src="assets/img/partner1.png" alt="Partner Logo 1" class="img-fluid partner-logo">
+                </div>
+                <div class="col-6 col-md-3 mb-4">
+                    <img src="assets/img/partner2.png" alt="Partner Logo 2" class="img-fluid partner-logo">
+                </div>
+                <div class="col-6 col-md-3 mb-4">
+                    <img src="assets/img/partner3.png" alt="Partner Logo 3" class="img-fluid partner-logo">
+                </div>
+                <div class="col-6 col-md-3 mb-4">
+                    <img src="assets/img/partner4.png" alt="Partner Logo 4" class="img-fluid partner-logo">
+                </div>
+                <!-- Add more partner logos as needed -->
+            </div>
+        </div>
+    </section>
+
+    <!-- CTA Section -->
+    <section class="section-padding bg-primary text-white text-center">
+        <div class="container">
+            <h2 class="mb-4" data-lang-key="cta-heading">جاهز لبدء تعاونك التجاري؟</h2>
+            <p class="lead mb-4" data-lang-key="cta-subheading">تواصل معنا اليوم لتحويل رؤيتك إلى واقع.</p>
+            <a href="contact.html" class="btn btn-light btn-lg" data-lang-key="contact-us-now">تواصل معنا الآن</a>
+        </div>
+    </section>
+
+    <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <div class="row">
@@ -174,49 +194,4 @@
                         <li><a href="services.html" class="footer-link" data-lang-key="services" data-original-href="services.html">خدماتنا</a></li>
                         <li><a href="products.html" class="footer-link" data-lang-key="products" data-original-href="products.html">المنتجات</a></li>
                         <li><a href="faqs.html" class="footer-link" data-lang-key="faqs" data-original-href="faqs.html">الأسئلة الشائعة</a></li>
-                        <li><a href="compliance.html" class="footer-link" data-lang-key="compliance" data-original-href="compliance.html">الامتثال والجودة</a></li>
-                        <li><a href="careers.html" class="footer-link" data-lang-key="careers" data-original-href="careers.html">الوظائف</a></li>
-                        <li><a href="contact.html" class="footer-link" data-lang-key="contact" data-original-href="contact.html">اتصل بنا</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-3 mb-4">
-                    <h5 data-lang-key="footer-contact-info">تواصل معنا</h5>
-                    <ul class="list-unstyled">
-                        <li data-lang-key="footer-email"><i class="fas fa-envelope me-2 ms-0"></i> info@egy-uae.com</li>
-                        <li data-lang-key="footer-phone"><i class="fas fa-phone me-2 ms-0"></i> 01013378572 (مصر)</li>
-                        <li data-lang-key="footer-address"><i class="fas fa-map-marker-alt me-2 ms-0"></i> 123 شارع النيل، القاهرة، مصر</li>
-                    </ul>
-                </div>
-                <div class="col-md-3 mb-4">
-                    <h5 data-lang-key="footer-social-media">تابعنا</h5>
-                    <div class="social-icons">
-                        <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-                        <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-                        <a href="#" target="_blank"><i class="fab fa-whatsapp"></i></a> <!-- WhatsApp Icon -->
-                    </div>
-                </div>
-            </div>
-            <div class="footer-bottom text-center">
-                <p data-lang-key="footer-copyright">&copy; <span id="year"></span> المؤسسة المصرية الإماراتية - جميع الحقوق محفوظة.</p>
-                <div>
-                    <a href="#" class="text-white mx-2" data-lang-key="privacy-policy">سياسة الخصوصية</a> |
-                    <a href="#" class="text-white mx-2" data-lang-key="terms-of-use">شروط الاستخدام</a> |
-                    <a href="#" class="text-white mx-2" data-lang-key="sitemap">خريطة الموقع</a>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-    <!-- Bootstrap JS and Popper.js -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
-    <!-- Custom JS -->
-    <script src="assets/js/script.js"></script>
-    <script>
-        // Update copyright year dynamically
-        document.getElementById('year').textContent = new Date().getFullYear();
-    </script>
-</body>
-</html>
+                        <li><
