--- a/about.html
+++ b/about.html
@@ -136,7 +136,7 @@
                     <div class="card shadow-sm text-center">
                         <img src="assets/img/team-member1.jpg" class="card-img-top p-3 rounded-circle mx-auto d-block" style="width: 150px; height: 150px; object-fit: cover;" alt="Team Member 1">
                         <div class="card-body">
-                            <h5 class="card-title fw-bold" data-lang-key="team-member1-name">أحمد المصري</h5>
+                            <h5 class="card-title fw-bold" data-lang-key="team-member1-name">إسماعيل المنشاوي</h5>
                             <p class="card-text text-muted" data-lang-key="team-member1-title">الرئيس التنفيذي</p>
                             <p class="card-text small" data-lang-key="team-member1-desc">خبرة تزيد عن 20 عامًا في التجارة الدولية وتطوير الأعمال.</p>
                         </div>
@@ -146,7 +146,7 @@
                     <div class="card shadow-sm text-center">
                         <img src="assets/img/team-member2.jpg" class="card-img-top p-3 rounded-circle mx-auto d-block" style="width: 150px; height: 150px; object-fit: cover;" alt="Team Member 2">
                         <div class="card-body">
-                            <h5 class="card-title fw-bold" data-lang-key="team-member2-name">فاطمة الإماراتي</h5>
+                            <h5 class="card-title fw-bold" data-lang-key="team-member2-name">أحمد بدراوي</h5>
                             <p class="card-text text-muted" data-lang-key="team-member2-title">مدير العمليات</p>
                             <p class="card-text small" data-lang-key="team-member2-desc">متخصصة في إدارة سلاسل الإمداد واللوجستيات بكفاءة عالية.</p>
                         </div>
