--- a/index.html
+++ b/index.html
@@ -1,197 +1,74 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-lang-key="home-title">المؤسسة المصرية الإماراتية للاستيراد والتصدير والتوكيلات التجارية</title>
-    <meta name="description" content="المؤسسة المصرية الإماراتية للاستيراد والتصدير والتوكيلات التجارية - بوابتك للتجارة العالمية. جودة، ثقة، سرعة.">
-    <meta name="keywords" content="استيراد, تصدير, توكيلات تجارية, مصر, الإمارات, تجارة دولية, منتجات, خدمات لوجستية">
-    
-    <!-- Favicon -->
-    <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome for icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- Google Fonts - Cairo for Arabic, Roboto for English -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&family=Roboto:wght@400;700&display=swap">
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MEtrade.cloud - Home</title>
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="icon" type="image/png" href="assets/icons/favicon.png" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body class="rtl">
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">
-                <img src="assets/img/logo.png" alt="Al Massria Al Emaratia Logo">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html" data-lang-key="home">الرئيسية</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html" data-lang-key="about">من نحن</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="services.html" data-lang-key="services">خدماتنا</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="products.html" data-lang-key="products">المنتجات</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="faqs.html" data-lang-key="faqs">الأسئلة الشائعة</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="compliance.html" data-lang-key="compliance">الامتثال والجودة</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="careers.html" data-lang-key="careers">الوظائف</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html" data-lang-key="contact">اتصل بنا</a>
-                    </li>
-                </ul>
-                <span class="navbar-text ms-3 lang-switcher" id="langSwitcher">English</span>
-            </div>
-        </div>
+<body>
+  <!-- Navigation -->
+  <header>
+    <nav class="navbar">
+      <div class="logo">
+        <a href="index.html">MEtrade.cloud</a>
+      </div>
+      <ul class="nav-links">
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="faqs.html">FAQs</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+      <div class="menu-toggle" onclick="toggleMenu()">☰</div>
     </nav>
+  </header>
 
-    <!-- Hero Section -->
-    <section class="hero-section text-white text-center">
-        <div class="container">
-            <h1 class="display-3 fw-bold" data-lang-key="hero-heading">المؤسسة المصرية الإماراتية<br>للاستيراد والتصدير والتوكيلات التجارية</h1>
-            <p class="lead" data-lang-key="hero-subheading">بوابتك للتجارة العالمية: ثقة، جودة، سرعة.</p>
-            <a href="about.html" class="btn btn-primary btn-lg" data-lang-key="discover-more">اكتشف المزيد</a>
-        </div>
-    </section>
+  <!-- Hero Section -->
+  <section class="hero">
+    <div class="hero-content">
+      <h1>Welcome to <span>MEtrade.cloud</span></h1>
+      <p>Your trusted cloud-based platform for global trade, import & export, and commercial agencies.</p>
+      <a href="services.html" class="btn-primary">Explore Services</a>
+    </div>
+  </section>
 
-    <!-- About Us & Services - Quick Glance -->
-    <section class="section-padding bg-light">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-6 mb-4 mb-md-0">
-                    <h2 class="section-title text-primary" data-lang-key="about-us-glance-title">من نحن</h2>
-                    <p class="lead" data-lang-key="about-us-summary">
-                        تأسست المؤسسة المصرية الإماراتية في عام 2010 لتكون جسرًا تجاريًا حيويًا يربط بين الأسواق المصرية، الإماراتية، والعالمية. 
-                        نلتزم بتقديم حلول استيراد وتصدير متكاملة ووكالات تجارية موثوقة، مدفوعة بقيم الجودة، الالتزام، الشفافية، والابتكار. 
-                        نحن نسعى لبناء شراكات استراتيجية طويلة الأمد ونعمل على تسهيل حركة التجارة العالمية بفاعلية واحترافية.
-                    </p>
-                    <a href="about.html" class="btn btn-outline-primary" data-lang-key="read-more">اقرأ المزيد</a>
-                </div>
-                <div class="col-md-6">
-                    <h2 class="section-title text-primary" data-lang-key="our-services-glance-title">خدماتنا</h2>
-                    <ul class="list-unstyled">
-                        <li class="d-flex align-items-center mb-3">
-                            <i class="fas fa-check-circle text-success me-2 ms-0"></i>
-                            <span data-lang-key="service-import">الاستيراد الاحترافي</span>
-                        </li>
-                        <li class="d-flex align-items-center mb-3">
-                            <i class="fas fa-check-circle text-success me-2 ms-0"></i>
-                            <span data-lang-key="service-export">التصدير العالمي</span>
-                        </li>
-                        <li class="d-flex align-items-center mb-3">
-                            <i class="fas fa-check-circle text-success me-2 ms-0"></i>
-                            <span data-lang-key="service-agencies">الوكالات التجارية الموثوقة</span>
-                        </li>
-                        <li class="d-flex align-items-center mb-3">
-                            <i class="fas fa-check-circle text-success me-2 ms-0"></i>
-                            <span data-lang-key="service-logistics">الدعم اللوجستي والتجاري</span>
-                        </li>
-                    </ul>
-                    <a href="services.html" class="btn btn-outline-primary" data-lang-key="view-all-services">عرض جميع الخدمات</a>
-                </div>
-            </div>
-        </div>
-    </section>
+  <!-- Features Section -->
+  <section class="features">
+    <h2>Why Choose Us?</h2>
+    <div class="feature-container">
+      <div class="feature-box">
+        <img src="assets/icons/cloud.svg" alt="Cloud" />
+        <h3>Cloud-Based Solutions</h3>
+        <p>Manage your business anytime, anywhere with secure cloud technologies.</p>
+      </div>
+      <div class="feature-box">
+        <img src="assets/icons/global.svg" alt="Global" />
+        <h3>Worldwide Reach</h3>
+        <p>Connecting importers and exporters across the globe with ease.</p>
+      </div>
+      <div class="feature-box">
+        <img src="assets/icons/support.svg" alt="Support" />
+        <h3>24/7 Support</h3>
+        <p>Our professional team is always ready to support your business needs.</p>
+      </div>
+    </div>
+  </section>
 
-    <!-- Features Section (Trust, Quality, Speed, Global Partnerships) -->
-    <section class="section-padding features-section">
-        <div class="container">
-            <h2 class="section-title text-center" data-lang-key="why-choose-us">لماذا تختارنا؟</h2>
-            <div class="row mt-5">
-                <div class="col-md-3 col-sm-6 mb-4">
-                    <div class="icon-box bg-white p-4 shadow-sm rounded">
-                        <i class="fas fa-handshake"></i>
-                        <h4 data-lang-key="feature-trust">الثقة</h4>
-                        <p data-lang-key="feature-trust-desc">نبني علاقاتنا على النزاهة والشفافية التامة.</p>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 mb-4">
-                    <div class="icon-box bg-white p-4 shadow-sm rounded">
-                        <i class="fas fa-gem"></i>
-                        <h4 data-lang-key="feature-quality">الجودة</h4>
-                        <p data-lang-key="feature-quality-desc">نلتزم بأعلى معايير الجودة في كل تعاملاتنا.</p>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 mb-4">
-                    <div class="icon-box bg-white p-4 shadow-sm rounded">
-                        <i class="fas fa-tachometer-alt"></i>
-                        <h4 data-lang-key="feature-speed">السرعة</h4>
-                        <p data-lang-key="feature-speed-desc">كفاءة عالية في التخليص والتسليم.</p>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 mb-4">
-                    <div class="icon-box bg-white p-4 shadow-sm rounded">
-                        <i class="fas fa-globe-americas"></i>
-                        <h4 data-lang-key="feature-partnerships">شراكات عالمية</h4>
-                        <p data-lang-key="feature-partnerships-desc">شبكة واسعة لضمان أفضل الفرص.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+  <!-- Footer -->
+  <footer>
+    <div class="footer-content">
+      <p>&copy; 2025 MEtrade.cloud | All Rights Reserved.</p>
+      <div class="footer-links">
+        <a href="privacy.html">Privacy Policy</a> | 
+        <a href="terms.html">Terms & Conditions</a> | 
+        <a href="sitemap.xml">Sitemap</a>
+      </div>
+    </div>
+  </footer>
 
-    <!-- Partners / Testimonials (Slider is more complex, here's a static section) -->
-    <section class="section-padding bg-light">
-        <div class="container">
-            <h2 class="section-title text-center" data-lang-key="our-partners">شركاؤنا</h2>
-            <div class="row mt-5 justify-content-center align-items-center">
-                <div class="col-6 col-md-3 mb-4">
-                    <img src="assets/img/partner1.png" alt="Partner Logo 1" class="img-fluid partner-logo">
-                </div>
-                <div class="col-6 col-md-3 mb-4">
-                    <img src="assets/img/partner2.png" alt="Partner Logo 2" class="img-fluid partner-logo">
-                </div>
-                <div class="col-6 col-md-3 mb-4">
-                    <img src="assets/img/partner3.png" alt="Partner Logo 3" class="img-fluid partner-logo">
-                </div>
-                <div class="col-6 col-md-3 mb-4">
-                    <img src="assets/img/partner4.png" alt="Partner Logo 4" class="img-fluid partner-logo">
-                </div>
-                <!-- Add more partner logos as needed -->
-            </div>
-        </div>
-    </section>
-
-    <!-- CTA Section -->
-    <section class="section-padding bg-primary text-white text-center">
-        <div class="container">
-            <h2 class="mb-4" data-lang-key="cta-heading">جاهز لبدء تعاونك التجاري؟</h2>
-            <p class="lead mb-4" data-lang-key="cta-subheading">تواصل معنا اليوم لتحويل رؤيتك إلى واقع.</p>
-            <a href="contact.html" class="btn btn-light btn-lg" data-lang-key="contact-us-now">تواصل معنا الآن</a>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 mb-4">
-                    <h5 data-lang-key="footer-about">المؤسسة المصرية الإماراتية</h5>
-                    <p data-lang-key="footer-about-desc">
-                        بوابتك الموثوقة للاستيراد والتصدير والوكالات التجارية بين مصر، الإمارات، والعالم. نلتزم بالتميز والابتكار.
-                    </p>
-                </div>
-                <div class="col-md-2 mb-4">
-                    <h5 data-lang-key="footer-quick-links">روابط سريعة</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="about.html" class="footer-link" data-lang-key="about" data-original-href="about.html">من نحن</a></li>
-                        <li><a href="services.html" class="footer-link" data-lang-key="services" data-original-href="services.html">خدماتنا</a></li>
-                        <li><a href="products.html" class="footer-link" data-lang-key="products" data-original-href="products.html">المنتجات</a></li>
-                        <li><a href="faqs.html" class="footer-link" data-lang-key="faqs" data-original-href="faqs.html">الأسئلة الشائعة</a></li>
-                        <li><
+  <script src="js/script.js"></script>
+</body>
+</html>
