--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <!-- Hero Section -->
   <section class="hero">
     <div class="hero-content">
-      <h1>Welcome to <span>MEtrade.cloud</span></h1>
+      <h1>Welcome to <span>Al Massria Al Emaratia</span></h1>
       <p>Your trusted cloud-based platform for global trade, import & export, and commercial agencies.</p>
       <a href="services.html" class="btn-primary">Explore Services</a>
     </div>
