--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     <nav class="navbar">
       <div class="logo">
-        <a href="index.html">MEtrade.cloud</a>
+        <a href="index.html">Al Massria Al Emaratia</a>
       </div>
       <ul class="nav-links">
         <li><a href="index.html" class="active">Home</a></li>
@@ -30,7 +30,9 @@
   <section class="hero">
     <div class="hero-content">
       <h1>Welcome to <span>Al Massria Al Emaratia</span></h1>
-      <p>Your trusted cloud-based platform for global trade, import & export, and commercial agencies.</p>
+      <h2>Global Trade Solutions from Egypt</h2>
+      <p>We facilitate global imports to Egypt and exports from Egypt to the world, providing comprehensive trade solutions and commercial agency services that connect Egyptian businesses with international markets.
+</p>
       <a href="services.html" class="btn-primary">Explore Services</a>
     </div>
   </section>
