--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <!-- Footer -->
   <footer>
     <div class="footer-content">
-      <p>&copy; 2025 MEtrade.cloud | All Rights Reserved.</p>
+      <p>&copy; 2025 Al Massria Al Emaratia | All Rights Reserved.</p>
       <div class="footer-links">
         <a href="privacy.html">Privacy Policy</a> | 
         <a href="terms.html">Terms & Conditions</a> | 
