--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <!-- Features Section -->
   <section class="features">
-    <h2>Why Choose Us?</h2>
+    <h2>About Our Foundation </h2>
     <div class="feature-container">
       <div class="feature-box">
         <img src="assets/icons/cloud.svg" alt="Cloud" />
