--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@ Our mission is to promote Egypt as a global trade gateway, contributing to the g
       </div>
       <div class="feature-box">
         <img src="assets/icons/global.svg" alt="Global" />
-        <h3>Worldwide Reach</h3>
-        <p>Connecting importers and exporters across the globe with ease.</p>
+        <h2> Our Service</h2>
+        <h3>Import & Export</h3>
+        <p>Comprehensive global import and export services for Egyptian businesses, including documentation, logistics, customs clearance, and regulatory compliance for worldwide trade.
+</p>
       </div>
       <div class="feature-box">
         <img src="assets/icons/support.svg" alt="Support" />
