--- a/index.html
+++ b/index.html
@@ -55,6 +55,21 @@ Our mission is to promote Egypt as a global trade gateway, contributing to the g
         <h3>Import & Export</h3>
         <p>Comprehensive global import and export services for Egyptian businesses, including documentation, logistics, customs clearance, and regulatory compliance for worldwide trade.
 </p>
+        <h3> Commercial Agency </h3>
+        <p> Represent international brands and products in the Egyptian market, and Egyptian products in international markets, providing local expertise and global market access.
+ </p>
+        <h3> Market Analysis </h3>
+        <p> Detailed market research and analysis to help businesses understand opportunities, challenges, and competitive landscapes in international markets and facilitate successful global trade.
+ </p>
+        <h3> Business Networking </h3>
+        <p> Connect with potential partners, suppliers, and clients through our extensive global network spanning major international markets and trade hubs worldwide.
+ </p>
+        <h3> Legal Consultation </h3>
+        <p> Expert guidance on legal and regulatory requirements for international trade with Egypt, including import/export regulations, international contracts, compliance, and trade agreements across multiple jurisdictions.
+ </p>
+        <h3> Supply Chain Management </h3>
+        <p> Optimize your global supply chain operations connecting Egypt with international markets for maximum efficiency, reliability, and cost-effectiveness in worldwide trade.
+ </p>
       </div>
       <div class="feature-box">
         <img src="assets/icons/support.svg" alt="Support" />
