--- a/index.html
+++ b/index.html
@@ -46,31 +46,38 @@
         <p> Al Massria Al Emaratia Foundation for Import, Export and Commercial Agencies was established in 2010 to facilitate global trade with Egypt as a strategic hub. We specialize in importing from worldwide markets to Egypt and exporting high-quality Egyptian products to international destinations, creating valuable business opportunities for our global partners.
 With deep knowledge of international markets and extensive global networks, we provide comprehensive services to help businesses navigate the complexities of worldwide trade. Our team of experts offers personalized solutions tailored to connect Egyptian businesses with global opportunities and bring international products to the Egyptian market.
 Our mission is to promote Egypt as a global trade gateway, contributing to the growth and prosperity of Egyptian businesses through strategic international partnerships and innovative trade solutions that connect Egypt with markets worldwide. </p>
-        <h3>Cloud-Based Solutions</h3>
-        <p>Manage your business anytime, anywhere with secure cloud technologies.</p>
       </div>
       <div class="feature-box">
-        <img src="assets/icons/global.svg" alt="Global" />
         <h2> Our Service</h2>
         <h3>Import & Export</h3>
         <p>Comprehensive global import and export services for Egyptian businesses, including documentation, logistics, customs clearance, and regulatory compliance for worldwide trade.
 </p>
+         <img src="assets/icons/global.svg" alt="Global" />
         <h3> Commercial Agency </h3>
         <p> Represent international brands and products in the Egyptian market, and Egyptian products in international markets, providing local expertise and global market access.
  </p>
+         <img src="assets/icons/global.svg" alt="Global" />
         <h3> Market Analysis </h3>
         <p> Detailed market research and analysis to help businesses understand opportunities, challenges, and competitive landscapes in international markets and facilitate successful global trade.
  </p>
+         <img src="assets/icons/global.svg" alt="Global" />
         <h3> Business Networking </h3>
         <p> Connect with potential partners, suppliers, and clients through our extensive global network spanning major international markets and trade hubs worldwide.
  </p>
+         <img src="assets/icons/global.svg" alt="Global" />
         <h3> Legal Consultation </h3>
         <p> Expert guidance on legal and regulatory requirements for international trade with Egypt, including import/export regulations, international contracts, compliance, and trade agreements across multiple jurisdictions.
  </p>
+         <img src="assets/icons/global.svg" alt="Global" />
         <h3> Supply Chain Management </h3>
         <p> Optimize your global supply chain operations connecting Egypt with international markets for maximum efficiency, reliability, and cost-effectiveness in worldwide trade.
  </p>
       </div>
+      <div>
+        <h2> Our Partners  </h2>
+        <p> We collaborate with leading organizations and businesses globally to provide comprehensive international trade solutions. Our strategic partnerships with shipping companies, customs agencies, trade organizations, and financial institutions worldwide enable us to offer enhanced services and connect Egyptian businesses with markets across all continents.
+ </p>
+         <img src="assets/icons/global.svg" alt="Global" />
       <div class="feature-box">
         <img src="assets/icons/support.svg" alt="Support" />
         <h3>24/7 Support</h3>
