--- a/index.html
+++ b/index.html
@@ -80,6 +80,17 @@ Our mission is to promote Egypt as a global trade gateway, contributing to the g
          <img src="assets/icons/global.svg" alt="Global" />
       <div class="feature-box">
         <img src="assets/icons/support.svg" alt="Support" />
+        <h3> Government Agencies </h3>
+        <p> Partnerships with government trade organizations in Egypt and international trade bodies worldwide.
+ </p>
+        <img src="assets/icons/global.svg" alt="Global" />
+        <h3> Corporate Partners </h3>
+        <p> Strategic alliances with leading international businesses and industry associations across global markets and sectors.
+ </p>
+        <img src="assets/icons/global.svg" alt="Global" />
+        <h3> Logistics Partners</h3>
+        <p> Partnerships with international shipping, freight, and logistics companies operating across major global trade routes and transportation hubs.
+ </p>
         <h3>24/7 Support</h3>
         <p>Our professional team is always ready to support your business needs.</p>
       </div>
