--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Our mission is to promote Egypt as a global trade gateway, contributing to the g
       </div>
       <div class="feature-box">
         <h2> Our Service</h2>
-        <img src="https://img.freepik.com/premium-vector/export-import-icon_535345-5045.jpg" alt="Global" />
+        <img style: 10px, src="https://img.freepik.com/premium-vector/export-import-icon_535345-5045.jpg" alt="Global" />
         <h3>Import & Export</h3>
         <p>Comprehensive global import and export services for Egyptian businesses, including documentation, logistics, customs clearance, and regulatory compliance for worldwide trade.
 </p>
