--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@ Our mission is to promote Egypt as a global trade gateway, contributing to the g
       </div>
       <div class="feature-box">
         <h2> Our Service</h2>
-        <img style: 10px, src="https://img.freepik.com/premium-vector/export-import-icon_535345-5045.jpg" alt="Global" />
+        <img src="https://img.freepik.com/premium-vector/export-import-icon_535345-5045.jpg" alt="Import & Export" />
         <h3>Import & Export</h3>
         <p>Comprehensive global import and export services for Egyptian businesses, including documentation, logistics, customs clearance, and regulatory compliance for worldwide trade.
 </p>
-         <img src="assets/icons/global.svg" alt="Global" />
+         <img src="https://static.vecteezy.com/system/resources/previews/068/013/591/non_2x/company-icons-flat-style-vector.jpg" alt="Commercial Agency" />
         <h3> Commercial Agency </h3>
         <p> Represent international brands and products in the Egyptian market, and Egyptian products in international markets, providing local expertise and global market access.
  </p>
