--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Our mission is to promote Egypt as a global trade gateway, contributing to the g
         <h3> Commercial Agency </h3>
         <p> Represent international brands and products in the Egyptian market, and Egyptian products in international markets, providing local expertise and global market access.
  </p>
-         <img src="assets/icons/global.svg" alt="Global" />
+         <img src="https://img.freepik.com/premium-vector/market-analysis-icon-simple-element-illustration-market-analysis-concept-symbol-design-can-be-used-web-mobile_159242-6884.jpg" alt="Market Analysis" />
         <h3> Market Analysis </h3>
         <p> Detailed market research and analysis to help businesses understand opportunities, challenges, and competitive landscapes in international markets and facilitate successful global trade.
  </p>
