--- a/index.html
+++ b/index.html
@@ -90,13 +90,18 @@ Our mission is to promote Egypt as a global trade gateway, contributing to the g
         <img src="assets/icons/global.svg" alt="Global" />
         <h3> Logistics Partners</h3>
         <p> Partnerships with international shipping, freight, and logistics companies operating across major global trade routes and transportation hubs.
- </p>
-        <img src="assets/icons/support.svg" alt="Support" />
-        <h3>24/7 Support</h3>
-        <p>Our professional team is always ready to support your business needs.</p>
+        </p>
       </div>
-    </div>
-  </section>
+      </section>
+        <section>
+          <div>
+            <h2> Meet Our Team </h2>
+           <img src="assets/icons/global.svg" alt="Global" />
+            <h3>Ismail El-Menshawy</h3>
+            <p> CEO </p>
+      
+          </div>
+        </section>
 
   <!-- Footer -->
   <footer>
