--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <!-- Hero Section -->
   <section class="hero">
     <div class="hero-content">
-      <h1 style="blue", 60px,>Welcome to <span>Al Massria Al Emaratia</span></h1>
+      <h1>Welcome to <span>Al Massria Al Emaratia</span></h1>
       <h2>Global Trade Solutions from Egypt</h2>
       <p>We facilitate global imports to Egypt and exports from Egypt to the world, providing comprehensive trade solutions and commercial agency services that connect Egyptian businesses with international markets.
 </p>
