--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Al Massria Al Emaratia - Home</title>
+  <title>Al Massria Al Emaratia - Global Trade Solutions</title>
   <link rel="stylesheet" href="css/style.css" />
   <link rel="icon" type="image/png" href="assets/icons/favicon.png" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <!-- Navigation -->
+  <!-- Navigation Header -->
   <header>
     <nav class="navbar">
       <div class="logo">
@@ -17,10 +17,10 @@
       </div>
       <ul class="nav-links">
         <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="about.html">About Us</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="faqs.html">FAQs</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
       </ul>
       <div class="menu-toggle" onclick="toggleMenu()">☰</div>
     </nav>
@@ -30,83 +30,105 @@
   <section class="hero">
     <div class="hero-content">
       <h1>Welcome to <span>Al Massria Al Emaratia</span></h1>
-      <h2>Global Trade Solutions from Egypt</h2>
-      <p>We facilitate global imports to Egypt and exports from Egypt to the world, providing comprehensive trade solutions and commercial agency services that connect Egyptian businesses with international markets.
-</p>
-      <a href="services.html" class="btn-primary">Explore Services</a>
+      <h2>Global Trade Solutions from Egypt to the World</h2>
+      <p>We facilitate global imports to Egypt and exports from Egypt to the world, providing comprehensive trade solutions and commercial agency services that connect Egyptian businesses with international markets.</p>
+      <a href="services.html" class="btn-primary">Explore Our Services</a>
     </div>
   </section>
 
-  <!-- Features Section -->
-  <section class="features">
-    <h2>About Our Foundation </h2>
-    <div class="feature-container">
-      <div class="feature-box">
-        <img src="https://media.istockphoto.com/id/1211513704/vector/about-us-blue-typography-banner.jpg?s=612x612&w=0&k=20&c=S-ewuVmyuvs59kbU6EaQO2BL1D4HGJ0T_h-PUhLDXnU=" alt="Cloud" />
-        <p> Al Massria Al Emaratia Foundation for Import, Export and Commercial Agencies was established in 2010 to facilitate global trade with Egypt as a strategic hub. We specialize in importing from worldwide markets to Egypt and exporting high-quality Egyptian products to international destinations, creating valuable business opportunities for our global partners.
-With deep knowledge of international markets and extensive global networks, we provide comprehensive services to help businesses navigate the complexities of worldwide trade. Our team of experts offers personalized solutions tailored to connect Egyptian businesses with global opportunities and bring international products to the Egyptian market.
-Our mission is to promote Egypt as a global trade gateway, contributing to the growth and prosperity of Egyptian businesses through strategic international partnerships and innovative trade solutions that connect Egypt with markets worldwide. </p>
+  <!-- About Us Section -->
+  <section class="about-us">
+    <div class="container">
+      <h2>About Our Foundation</h2>
+      <div class="about-content">
+        <img src="https://media.istockphoto.com/id/1211513704/vector/about-us-blue-typography-banner.jpg?s=612x612&w=0&k=20&c=S-ewuVmyuvs59kbU6EaQO2BL1D4HGJ0T_h-PUhLDXnU=" alt="About Us Banner" class="about-image" />
+        <p>Al Massria Al Emaratia Foundation for Import, Export and Commercial Agencies was established in 2010 to facilitate global trade with Egypt as a strategic hub. We specialize in importing from worldwide markets to Egypt and exporting high-quality Egyptian products to international destinations, creating valuable business opportunities for our global partners.</p>
+        <p>With deep knowledge of international markets and extensive global networks, we provide comprehensive services to help businesses navigate the complexities of worldwide trade. Our team of experts offers personalized solutions tailored to connect Egyptian businesses with global opportunities and bring international products to the Egyptian market.</p>
+        <p>Our mission is to promote Egypt as a global trade gateway, contributing to the growth and prosperity of Egyptian businesses through strategic international partnerships and innovative trade solutions that connect Egypt with markets worldwide.</p>
       </div>
-      <div class="feature-box">
-        <h2> Our Service</h2>
-        <img src="https://img.freepik.com/premium-vector/export-import-icon_535345-5045.jpg" alt="Import & Export" />
-        <h3>Import & Export</h3>
-        <p>Comprehensive global import and export services for Egyptian businesses, including documentation, logistics, customs clearance, and regulatory compliance for worldwide trade.
-</p>
-         <img src="https://static.vecteezy.com/system/resources/previews/068/013/591/non_2x/company-icons-flat-style-vector.jpg" alt="Commercial Agency" />
-        <h3> Commercial Agency </h3>
-        <p> Represent international brands and products in the Egyptian market, and Egyptian products in international markets, providing local expertise and global market access.
- </p>
-         <img src="https://img.freepik.com/premium-vector/market-analysis-icon-simple-element-illustration-market-analysis-concept-symbol-design-can-be-used-web-mobile_159242-6884.jpg" alt="Market Analysis" />
-        <h3> Market Analysis </h3>
-        <p> Detailed market research and analysis to help businesses understand opportunities, challenges, and competitive landscapes in international markets and facilitate successful global trade.
- </p>
-         <img src="assets/icons/global.svg" alt="Global" />
-        <h3> Business Networking </h3>
-        <p> Connect with potential partners, suppliers, and clients through our extensive global network spanning major international markets and trade hubs worldwide.
- </p>
-         <img src="assets/icons/global.svg" alt="Global" />
-        <h3> Legal Consultation </h3>
-        <p> Expert guidance on legal and regulatory requirements for international trade with Egypt, including import/export regulations, international contracts, compliance, and trade agreements across multiple jurisdictions.
- </p>
-         <img src="assets/icons/global.svg" alt="Global" />
-        <h3> Supply Chain Management </h3>
-        <p> Optimize your global supply chain operations connecting Egypt with international markets for maximum efficiency, reliability, and cost-effectiveness in worldwide trade.
- </p>
+    </div>
+  </section>
+
+  <!-- Services Section -->
+  <section class="services">
+    <div class="container">
+      <h2>Our Services</h2>
+      <div class="service-container">
+        <div class="service-box">
+          <img src="https://img.freepik.com/premium-vector/export-import-icon_535345-5045.jpg" alt="Import & Export Icon" />
+          <h3>Import & Export</h3>
+          <p>Comprehensive global import and export services for Egyptian businesses, including documentation, logistics, customs clearance, and regulatory compliance for worldwide trade.</p>
+        </div>
+        <div class="service-box">
+          <img src="https://static.vecteezy.com/system/resources/previews/068/013/591/non_2x/company-icons-flat-style-vector.jpg" alt="Commercial Agency Icon" />
+          <h3>Commercial Agency</h3>
+          <p>Represent international brands and products in the Egyptian market, and Egyptian products in international markets, providing local expertise and global market access.</p>
+        </div>
+        <div class="service-box">
+          <img src="https://img.freepik.com/premium-vector/market-analysis-icon-simple-element-illustration-market-analysis-concept-symbol-design-can-be-used-web-mobile_159242-6884.jpg" alt="Market Analysis Icon" />
+          <h3>Market Analysis</h3>
+          <p>Detailed market research and analysis to help businesses understand opportunities, challenges, and competitive landscapes in international markets and facilitate successful global trade.</p>
+        </div>
+        <div class="service-box">
+          <img src="assets/icons/global.svg" alt="Business Networking Icon" />
+          <h3>Business Networking</h3>
+          <p>Connect with potential partners, suppliers, and clients through our extensive global network spanning major international markets and trade hubs worldwide.</p>
+        </div>
+        <div class="service-box">
+          <img src="assets/icons/global.svg" alt="Legal Consultation Icon" />
+          <h3>Legal Consultation</h3>
+          <p>Expert guidance on legal and regulatory requirements for international trade with Egypt, including import/export regulations, international contracts, compliance, and trade agreements across multiple jurisdictions.</p>
+        </div>
+        <div class="service-box">
+          <img src="assets/icons/global.svg" alt="Supply Chain Management Icon" />
+          <h3>Supply Chain Management</h3>
+          <p>Optimize your global supply chain operations connecting Egypt with international markets for maximum efficiency, reliability, and cost-effectiveness in worldwide trade.</p>
+        </div>
       </div>
-      <div>
-        <h2> Our Partners  </h2>
-        <p> We collaborate with leading organizations and businesses globally to provide comprehensive international trade solutions. Our strategic partnerships with shipping companies, customs agencies, trade organizations, and financial institutions worldwide enable us to offer enhanced services and connect Egyptian businesses with markets across all continents.
- </p>
-         <img src="assets/icons/global.svg" alt="Global" />
-      <div class="feature-box">
-        <h3> Government Agencies </h3>
-        <p> Partnerships with government trade organizations in Egypt and international trade bodies worldwide.
- </p>
-        <img src="assets/icons/global.svg" alt="Global" />
-        <h3> Corporate Partners </h3>
-        <p> Strategic alliances with leading international businesses and industry associations across global markets and sectors.
- </p>
-        <img src="assets/icons/global.svg" alt="Global" />
-        <h3> Logistics Partners</h3>
-        <p> Partnerships with international shipping, freight, and logistics companies operating across major global trade routes and transportation hubs.
-        </p>
+    </div>
+  </section>
+
+  <!-- Partners Section -->
+  <section class="partners">
+    <div class="container">
+      <h2>Our Partners</h2>
+      <p>We collaborate with leading organizations and businesses globally to provide comprehensive international trade solutions. Our strategic partnerships with shipping companies, customs agencies, trade organizations, and financial institutions worldwide enable us to offer enhanced services and connect Egyptian businesses with markets across all continents.</p>
+      <div class="partner-container">
+        <div class="partner-box">
+          <img src="assets/icons/global.svg" alt="Government Agencies Icon" />
+          <h3>Government Agencies</h3>
+          <p>Partnerships with government trade organizations in Egypt and international trade bodies worldwide.</p>
+        </div>
+        <div class="partner-box">
+          <img src="assets/icons/global.svg" alt="Corporate Partners Icon" />
+          <h3>Corporate Partners</h3>
+          <p>Strategic alliances with leading international businesses and industry associations across global markets and sectors.</p>
+        </div>
+        <div class="partner-box">
+          <img src="assets/icons/global.svg" alt="Logistics Partners Icon" />
+          <h3>Logistics Partners</h3>
+          <p>Partnerships with international shipping, freight, and logistics companies operating across major global trade routes and transportation hubs.</p>
+        </div>
       </div>
-      </section>
-        <section>
-          <div>
-            <h2> Meet Our Team </h2>
-           <img src="assets/icons/global.svg" alt="Global" />
-            <h3>Ismail El-Menshawy</h3>
-            <p> CEO </p>
-      
-          </div>
-        </section>
+    </div>
+  </section>
+
+  <!-- Team Section -->
+  <section class="team">
+    <div class="container">
+      <h2>Meet Our Team</h2>
+      <div class="team-member">
+        <img src="assets/icons/global.svg" alt="Ismail El-Menshawy Photo" class="team-photo" />
+        <h3>Ismail El-Menshawy</h3>
+        <p>CEO</p>
+      </div>
+    </div>
+  </section>
 
   <!-- Footer -->
   <footer>
     <div class="footer-content">
-      <p>&copy; 2025 Al Massria Al Emaratia | All Rights Reserved.</p>
+      <p>&copy; <span id="current-year"></span> Al Massria Al Emaratia | All Rights Reserved.</p>
       <div class="footer-links">
         <a href="privacy.html">Privacy Policy</a> | 
         <a href="terms.html">Terms & Conditions</a> | 
@@ -116,5 +138,8 @@ Our mission is to promote Egypt as a global trade gateway, contributing to the g
   </footer>
 
   <script src="js/script.js"></script>
+  <script>
+    document.getElementById("current-year").textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
