--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Al Massria Al Emaratia - Global Trade Solutions</title>
   <link rel="stylesheet" href="assets/css/style.css" />
-  <link rel="icon" type="image/png" href="assets/icons/favicon.png" />
+  <link rel="icon" type="image/png" href="https://i.imgur.com/your-favicon.png" /> <!-- Placeholder for your actual favicon -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <!-- Font Awesome for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
   <!-- Navigation Header -->
@@ -41,7 +43,7 @@
     <div class="container">
       <h2>About Our Foundation</h2>
       <div class="about-content">
-        <img src="https://media.istockphoto.com/id/1211513704/vector/about-us-blue-typography-banner.jpg?s=612x612&w=0&k=20&c=S-ewuVmyuvs59kbU6EaQO2BL1D4HGJ0T_h-PUhLDXnU=" alt="About Us Banner" class="about-image" />
+        <img src="https://i.imgur.com/your-about-us-image.jpg" alt="About Us Banner - Global trade network" class="about-image" /> <!-- Placeholder for your actual About Us image -->
         <p>Al Massria Al Emaratia Foundation for Import, Export and Commercial Agencies was established in 2010 to facilitate global trade with Egypt as a strategic hub. We specialize in importing from worldwide markets to Egypt and exporting high-quality Egyptian products to international destinations, creating valuable business opportunities for our global partners.</p>
         <p>With deep knowledge of international markets and extensive global networks, we provide comprehensive services to help businesses navigate the complexities of worldwide trade. Our team of experts offers personalized solutions tailored to connect Egyptian businesses with global opportunities and bring international products to the Egyptian market.</p>
         <p>Our mission is to promote Egypt as a global trade gateway, contributing to the growth and prosperity of Egyptian businesses through strategic international partnerships and innovative trade solutions that connect Egypt with markets worldwide.</p>
@@ -55,32 +57,32 @@
       <h2>Our Services</h2>
       <div class="service-container">
         <div class="service-box">
-          <img src="https://img.freepik.com/premium-vector/export-import-icon_535345-5045.jpg" alt="Import & Export Icon" />
+          <i class="fas fa-ship fa-3x"></i> <!-- Shipping icon -->
           <h3>Import & Export</h3>
           <p>Comprehensive global import and export services for Egyptian businesses, including documentation, logistics, customs clearance, and regulatory compliance for worldwide trade.</p>
         </div>
         <div class="service-box">
-          <img src="https://static.vecteezy.com/system/resources/previews/068/013/591/non_2x/company-icons-flat-style-vector.jpg" alt="Commercial Agency Icon" />
+          <i class="fas fa-handshake fa-3x"></i> <!-- Handshake icon for agency -->
           <h3>Commercial Agency</h3>
           <p>Represent international brands and products in the Egyptian market, and Egyptian products in international markets, providing local expertise and global market access.</p>
         </div>
         <div class="service-box">
-          <img src="https://img.freepik.com/premium-vector/market-analysis-icon-simple-element-illustration-market-analysis-concept-symbol-design-can-be-used-web-mobile_159242-6884.jpg" alt="Market Analysis Icon" />
+          <i class="fas fa-chart-line fa-3x"></i> <!-- Chart line icon for market analysis -->
           <h3>Market Analysis</h3>
           <p>Detailed market research and analysis to help businesses understand opportunities, challenges, and competitive landscapes in international markets and facilitate successful global trade.</p>
         </div>
         <div class="service-box">
-          <img src="assets/icons/global.svg" alt="Business Networking Icon" />
+          <i class="fas fa-globe-americas fa-3x"></i> <!-- Globe icon for networking -->
           <h3>Business Networking</h3>
           <p>Connect with potential partners, suppliers, and clients through our extensive global network spanning major international markets and trade hubs worldwide.</p>
         </div>
         <div class="service-box">
-          <img src="assets/icons/global.svg" alt="Legal Consultation Icon" />
+          <i class="fas fa-balance-scale fa-3x"></i> <!-- Balance scale icon for legal -->
           <h3>Legal Consultation</h3>
           <p>Expert guidance on legal and regulatory requirements for international trade with Egypt, including import/export regulations, international contracts, compliance, and trade agreements across multiple jurisdictions.</p>
         </div>
         <div class="service-box">
-          <img src="assets/icons/global.svg" alt="Supply Chain Management Icon" />
+          <i class="fas fa-boxes fa-3x"></i> <!-- Boxes icon for supply chain -->
           <h3>Supply Chain Management</h3>
           <p>Optimize your global supply chain operations connecting Egypt with international markets for maximum efficiency, reliability, and cost-effectiveness in worldwide trade.</p>
         </div>
@@ -95,17 +97,17 @@
       <p>We collaborate with leading organizations and businesses globally to provide comprehensive international trade solutions. Our strategic partnerships with shipping companies, customs agencies, trade organizations, and financial institutions worldwide enable us to offer enhanced services and connect Egyptian businesses with markets across all continents.</p>
       <div class="partner-container">
         <div class="partner-box">
-          <img src="assets/icons/global.svg" alt="Government Agencies Icon" />
+          <i class="fas fa-building fa-3x"></i> <!-- Building icon for government -->
           <h3>Government Agencies</h3>
           <p>Partnerships with government trade organizations in Egypt and international trade bodies worldwide.</p>
         </div>
         <div class="partner-box">
-          <img src="assets/icons/global.svg" alt="Corporate Partners Icon" />
+          <i class="fas fa-briefcase fa-3x"></i> <!-- Briefcase icon for corporate -->
           <h3>Corporate Partners</h3>
           <p>Strategic alliances with leading international businesses and industry associations across global markets and sectors.</p>
         </div>
         <div class="partner-box">
-          <img src="assets/icons/global.svg" alt="Logistics Partners Icon" />
+          <i class="fas fa-truck-moving fa-3x"></i> <!-- Truck moving icon for logistics -->
           <h3>Logistics Partners</h3>
           <p>Partnerships with international shipping, freight, and logistics companies operating across major global trade routes and transportation hubs.</p>
         </div>
@@ -118,7 +120,7 @@
     <div class="container">
       <h2>Meet Our Team</h2>
       <div class="team-member">
-        <img src="assets/icons/global.svg" alt="Ismail El-Menshawy Photo" class="team-photo" />
+        <img src="https://i.imgur.com/your-team-photo.jpg" alt="Ismail El-Menshawy Photo" class="team-photo" /> <!-- Placeholder for actual team photo -->
         <h3>Ismail El-Menshawy</h3>
         <p>CEO</p>
       </div>
