--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="container">
       <h2>Meet Our Team</h2>
       <div class="team-member">
-        <img src="https://i.imgur.com/your-team-photo.jpg" alt="Ismail El-Menshawy Photo" class="team-photo" /> <!-- Placeholder for actual team photo -->
+        <img src="https://media.licdn.com/dms/image/v2/C4D03AQGqUvPUL1hhSw/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1524686640651?e=1759968000&v=beta&t=SLu09yyLZ3MP6iZ8WHJc4CAefBKBpqvHhPLMz3CJxxY" alt="Ismail El-Menshawy Photo" class="team-photo" /> <!-- Placeholder for actual team photo -->
         <h3>Ismail El-Menshawy</h3>
         <p>CEO</p>
       </div>
