--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="container">
       <h2>Meet Our Team</h2>
       <div class="team-member">
-        <img src="https://media.licdn.com/dms/image/v2/C4D03AQGqUvPUL1hhSw/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1524686640651?e=1759968000&v=beta&t=SLu09yyLZ3MP6iZ8WHJc4CAefBKBpqvHhPLMz3CJxxY" alt="Ismail El-Menshawy Photo" class="team-photo" /> <!-- Placeholder for actual team photo -->
+        <img src="https://ucfd09236335c945763fb8a33055.previews.dropboxusercontent.com/p/thumb/ACza04zUIMjK5qpFKU1VebAxX5GaUZJXBYbgEaBeiuaBzCpvRrBHnJrk1W2O4iIFoL-LkawXHGM1sH32L7YoQN6S6eyFTjPzl9mhGyqNZ2167VkxxIo9tRUZkaIN6M-xeTJbWqN8PtujAtbwATzu0osxCn_57Xpn6tiUHeYHJ0dJslXQc9aO41FLEr9Graf5RuQaCaCRnSVGmM14JLNSoJZqI6Fxy6roPcjqzuVODMfPFuQSzoAlFGv0T9H_roiq3ykrOTsd-Wu3NoZtPbzHNzd_sulMiURHpaqA1KaYxRPHBhqC9Zzn8sc3l_BeoXT2tSm_S91tNOXp52mLSYlbVvj9mCkx0hPGchAzPf1eB5Z0ksY39qBbkiRJpIH0Je-t09-diVzpkhE6PRZ1U2nsOy-i/p.jpeg?is_prewarmed=true" /> <!-- Placeholder for actual team photo -->
         <h3>Ismail El-Menshawy</h3>
         <p>CEO</p>
       </div>
