--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact Us - Egy-UAE</title>
+  <title>Contact Us - Al Massria Al Emaratia</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <!-- Header -->
   <header>
     <div class="container">
-      <h1 class="logo">Egy-UAE</h1>
+      <h1 class="logo">Al Massria Al Emaratia</h1>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -49,8 +49,8 @@
         <!-- Contact Info -->
         <div class="contact-info">
           <h3>Our Contact Details</h3>
-          <p><strong>Address:</strong> Main Branch, Al Sharqia, Egypt</p>
-          <p><strong>Phone:</strong> +20 101 337 8572</p>
+          <p><strong>Address:</strong> 10th of Ramadan, Al Sharqia, Egypt</p>
+          <p><strong>Phone:</strong> +20 101 176 6232</p>
           <p><strong>Email:</strong> info@egy-uae.com</p>
         </div>
       </div>
