--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Al Massria Al Emaratia - Global Trade Solutions</title>
   <link rel="stylesheet" href="assets/css/style.css" />
   <!-- TODO: Replace with your actual favicon path. Google Photos links can be unstable. -->
-  <link rel="icon" type="image/x-icon" href="https://photos.app.goo.gl/QFzF1nPQAAw3vaaX9" /> 
+  <link rel="icon" type="image/x-icon" href="https://media.licdn.com/dms/image/v2/D4E0BAQFmv89WqXXUhQ/company-logo_200_200/company-logo_200_200/0/1729355046941/al_massria_al_emaratia_for_import_export_and_commercial_agencies_logo?e=2147483647&v=beta&t=IgDmCVujrrsY3jPigHMLwFIJsv_9j6lEqkL0k_xqSRw" /> 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
