--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="logo">
         <a href="index.html">
           <!-- TODO: Replace with your actual logo path. Google Photos links can be unstable. -->
-          <img src="https://photos.app.goo.gl/QFzF1nPQAAw3vaaX9" alt="Al Massria Al Emaratia Company Logo" class="company-logo-header"> 
+          <img src="https://media.licdn.com/dms/image/v2/D4E0BAQFmv89WqXXUhQ/company-logo_200_200/company-logo_200_200/0/1729355046941/al_massria_al_emaratia_for_import_export_and_commercial_agencies_logo?e=2147483647&v=beta&t=IgDmCVujrrsY3jPigHMLwFIJsv_9j6lEqkL0k_xqSRw" alt="Al Massria Al Emaratia Company Logo" class="company-logo-header"> 
         </a>
       </div>
       <ul class="nav-links">
