--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <img src="https://uc2619d8c80f91a5999ee6b073a7.previews.dropboxusercontent.com/p/thumb/ACxI7YeGd21QVs0vhP9F1-rcC4xAhlN3bYxJwyusO6lCLijHtusma-sZ-AnQISTDuk8EmlNYu5K4800WKimzQ0zwpnWOrTJy8COo-Oo85ycJVX4NoG1HArpq-SBzA_cwwnNalNruLeR_4PNkdpg-FD6PhGmI9nT3lOnHXXrE7-Jx5nyVequ0WR5KvQ_yRXzo_3CLS9Aduq8PEtkx8guTPgkY5x_P7a5indVhgiJe_s6nE4IjiXY28qhkqY_AtoOqiT32L2HWd2ZXqfibr-rJyZrlWBnrDbrNhdbY7B0OL-ih9Wjl0KeBRUK-xSIt5a9vSfqssHgeNiU-hOeCtEEGoiDY7QNyRmgluAQ2PfeyroAl_0Phe38maIvyJ2hr4xrsg3owmVlSx6G8voNP7fcpaDBC/p.jpeg?is_prewarmed=true" alt="Portrait of Ismail El-Menshawy" /> 
           <h3>Ismail El-Menshawy</h3>
           <p>CEO</p>
-                    <img src="https://uc2619d8c80f91a5999ee6b073a7.previews.dropboxusercontent.com/p/thumb/ACxI7YeGd21QVs0vhP9F1-rcC4xAhlN3bYxJwyusO6lCLijHtusma-sZ-AnQISTDuk8EmlNYu5K4800WKimzQ0zwpnWOrTJy8COo-Oo85ycJVX4NoG1HArpq-SBzA_cwwnNalNruLeR_4PNkdpg-FD6PhGmI9nT3lOnHXXrE7-Jx5nyVequ0WR5KvQ_yRXzo_3CLS9Aduq8PEtkx8guTPgkY5x_P7a5indVhgiJe_s6nE4IjiXY28qhkqY_AtoOqiT32L2HWd2ZXqfibr-rJyZrlWBnrDbrNhdbY7B0OL-ih9Wjl0KeBRUK-xSIt5a9vSfqssHgeNiU-hOeCtEEGoiDY7QNyRmgluAQ2PfeyroAl_0Phe38maIvyJ2hr4xrsg3owmVlSx6G8voNP7fcpaDBC/p.jpeg?is_prewarmed=true" alt="Portrait of Ismail El-Menshawy" /> 
+          <img src="https://media.licdn.com/dms/image/v2/D4E03AQF53Zyc3C3eVg/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1730487573408?e=1759968000&v=beta&t=mFhiI8AMgaVE28LXkm8nDBCDzu-qxMU-P-9xZXrvqpk" alt="Portrait of Ismail El-Menshawy" /> 
           <h3> Ahmed Badrawi </h3>
           <p>Head Of Digital Transformation</p>
         </div>
